Assign up to 10 keywords on auto response

--- a/app/views/user/friends/index.html.erb
+++ b/app/views/user/friends/index.html.erb
@@ -42,8 +42,8 @@
                   <%= render_friend_status(line_friend.status).html_safe %>
                 </td>
                 <td class="text-center">
-                  <%= link_to user_friend_path(line_friend), class: "btn btn-outline-success btn-sm mr-2" do %>
-                    <i class="fas fa-eye"></i> 詳細
+                  <%= link_to user_friend_path(line_friend), class: "btn btn-primary btn-xs mr-2" do %>
+                    詳細
                   <% end %>
                 </td>
               </tr>
