Handle message from websocket

--- a/app/views/user/broadcasts/edit.html.erb
+++ b/app/views/user/broadcasts/edit.html.erb
@@ -1,1 +1,1 @@
-<broadcast-create :broadcast_id="<%= @broadcast_id %>"></broadcast-create>
+<broadcast-editor :broadcast_id="<%= @broadcast_id %>"></broadcast-editor>
