Update message bubble style

--- a/app/javascript/stylesheets/chatbox.css
+++ b/app/javascript/stylesheets/chatbox.css
@@ -1024,7 +1024,8 @@
   .chatbox
   > .container
   .messages
-  .chat.chat-reverse
+  .chat.bot
+  .chat.user
   .chat-content
   .chat-body
   .chat-main
@@ -1042,7 +1043,7 @@
   .chatbox
   > .container
   .messages
-  .chat.chat-reverse
+  .chat.bot
   .chat-content
   .chat-body
   .chat-sub {
