Refactor folder structure

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -5,7 +5,7 @@
 @import "./emojione/emojionearea.min.css";
 @import "./linebot.css";
 @import "./common.css";
-@import "./chatbox.css";
+@import "./chatbox.scss";
 @import "./perfect-scrollbar.min.css";
 @import "./register.css";
 @import "./slick/slick.css";
