--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -31,13 +31,8 @@
             <tbody>
               <% @messages.each do |message| %>
                 <tr>
-                  <% if @scenario.mode_date? %>
-                    <td><%= message.is_initial? == 0 ? '開始当日' : "#{message.date}日後" %></td>
-                    <td><%= message.time %> <span class="ml-2"><%= message.order %>通目</span></td>
-                  <% elsif @scenario.mode_elapsed_time? %>
-                    <td><%= message.is_initial ? '開始当日' : '' %></td>
-                    <td><%= message.is_initial? ? "#{message.order}通目" : "#{message.date}日#{message.time&.to_time.strftime('%-H時間%-M分')}後 #{message.order}通目" %></td>
-                  <% end %>
+                  <td><%= schedule_date_for(@scenario, message) %></td>
+                  <td><%= schedule_time_for(@scenario, message) %></td>
                   <td><%= message.name %></td>
                   <td><message-type-label :data="<%= message.content.to_json %>"/></td>
                   <td><message-content :data="<%= message.content.to_json %>"></message-content></td>
