--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,12 +1,88 @@
 <div class="row">
   <div class="col-12">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header d-flex">
+       <!-- Start: search condition -->
         <%= link_to new_admin_user_path do %>
           <button type="button" class="btn btn-info mr-2"><i class="fa fa-plus"></i> new user </button>
         <% end %>
+        <%= search_form_for @q, url: search_admin_users_path do |f| %>
+          <div class="d-flex">
+            <%= f.search_field :name_or_company_name_or_email_cont, placeholder: "Text", class: "form-control search-box mw-300 mr-2" %>
+            <button class="btn btn-info btn-normal m-auto search-button" type="submit">検索</button>
+          </div>
+        <% end %>
+        <!-- End: search condition -->
       </div>
-      <div class="card-body"></div>
+      <div class="card-body">
+        <div class="table-responsive">
+           <table class="table table-bordered table-striped">
+           <%# Header %>
+              <thead>
+                <tr>
+                  <th class="fw-50 text-center"><%= sort_link(@q, :id, 'ID', default_order: :desc) %></th>
+                  <th class="fw-150"><%= sort_link(@q, :name, '氏名', default_order: :asc) %></th>
+                  <th class="fw-200"><%= sort_link(@q, :email, 'メールアドレス', default_order: :asc) %></th>
+                  <th class="fw-150">登録日時</th>
+                  <th class="fw-100">状況</th>
+                  <th class="fw-200"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @users.each do |user| %>
+                  <tr>
+                    <td class="text-center"><%= link_to user.id, admin_user_path(user) %></td>
+                    <td><%= user.name %></td>
+                    <td><%= user.email %></td>
+                    <td><%= user.created_at.strftime('%Y年%-m月%-d日') %></td>
+                    <td>
+                      <span class="badge <%= user.status.eql?('actived') ? 'badge-success' : (user.status.eql?('blocked') ? 'badge-danger' : 'badge-warning') %>"><%= user.status_i18n %></span>
+                    </td>
+                    <td>
+                      <div>
+                        <%= link_to admin_user_path(user), class: "btn btn-outline-info btn-xs", target: :_blank do %>
+                          <i class="fas fa-eye"></i> 詳細
+                        <% end %>
+                        <%= link_to edit_admin_user_path(user), class: "btn btn-outline-info btn-xs" do %>
+                          <i class="fas fa-pencil-alt"></i> 編集
+                        <% end %>
+                      </div>
+                      <div class="mt-2">
+                        <a class="btn btn-outline-danger btn-xs" data-toggle="modal" data-target="#confirmSwitch" onclick="confirmScope(<%= user.id %>)">
+                          <% if user.status.eql?('actived')%>
+                            <i class="fas fa-lock"></i> ブロック
+                          <% else %>
+                            <i class="fas fa-unlock"></i> ブロック解除
+                          <% end %>
+                        </a>
+                        <%= link_to delete_confirm_admin_user_path(user), remote: true, class: "btn btn-danger btn-xs" do%>
+                          <i class="fas fa-trash"></i> 削除
+                        <% end %>
+                      </div>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+           <%# Data %>
+           </table>
+        </div>
+        <%# Pagination %>
+        <div class="d-flex justify-content-center mt-4">
+          <% if @users.size == 0 %>
+            <b>データはありません。</b>
+          <% end %>
+          <%= paginate @users %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+
+<div id='confirmDelContent'></div>
+<modal-change-user-status :users="<%= @users.to_json %>"></modal-change-user-status>
+<input type="hidden" id="inputValue">
+<script>
+  function confirmScope(id) {
+    $('#inputValue').val(id);
+  }
+</script>
