--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,25 +1,44 @@
-<div class="mw-1200" >
-  <div class="card">
-    <div class="card-header d-flex align-items-center">
-      <%= link_to admin_users_path, class: "text-info" do %>
-        <i class="fa fa-arrow-left"></i>
-        Back to list
-      <% end %>
-      <h5 class="m-auto font-weight-bold">User detail</h5>
-    </div>
-    <div class="card-body">
-      <table class="table">
-        <tbody>
-          <tr>
-            <th class="fw-300">email</th>
-            <td><%= @user.email %></td>
-          </tr>
-          <tr>
-            <th class="fw-300">name</th>
-            <td><%= @user.name %></td>
-          </tr>
-        </tbody>
-      </table>
+<div class="row" >
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header d-flex align-items-center">
+        <%= link_to admin_users_path, class: "text-info" do %>
+          <i class="fa fa-arrow-left"></i>
+          Back to list
+        <% end %>
+        <h5 class="m-auto font-weight-bold">User detail</h5>
+      </div>
+      <div class="card-body row">
+        <div class="offset-xl-3 col-xl-6 text-center">
+          <div class="table-responsive">
+            <table class="table table-bordered table-striped mt-3 text-left">
+              <tbody>
+                <tr>
+                  <th class="w-200">ID</th>
+                  <td class="text-prewrap"><%= @user.id %></td>
+                </tr>
+                <tr>
+                  <th class="fw-300">メールアドレス</th>
+                  <td><%= @user.email %></td>
+                </tr>
+                <tr>
+                  <th class="fw-300">氏名</th>
+                  <td><%= @user.name %></td>
+                </tr>
+                <tr>
+                  <th>状況</th>
+                  <td>
+                    <span class="badge <%= @user.status.eql?('actived') ? 'badge-success' : (@user.status.eql?('blocked') ? 'badge-danger' : 'badge-warning') %>"><%= @user.status_i18n %></span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="card-footer d-flex">
+        <%= link_to "編集", edit_admin_user_path(@user), class: "btn btn-info m-auto" %>
+      </div>
     </div>
   </div>
 </div>
