--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -23,9 +23,10 @@
                   <th class="fw-50 text-center"><%= sort_link(@q, :id, 'ID', default_order: :desc) %></th>
                   <th class="fw-150"><%= sort_link(@q, :name, '氏名', default_order: :asc) %></th>
                   <th class="fw-200"><%= sort_link(@q, :email, 'メールアドレス', default_order: :asc) %></th>
+                  <th class="fw-200">company_name</th>
                   <th class="fw-150">登録日時</th>
                   <th class="fw-100">状況</th>
-                  <th class="fw-200"></th>
+                  <th class="fw-250"></th>
                 </tr>
               </thead>
               <tbody>
@@ -34,6 +35,7 @@
                     <td class="text-center"><%= link_to user.id, admin_user_path(user) %></td>
                     <td><%= user.name %></td>
                     <td><%= user.email %></td>
+                    <td><%= user.company_name %></td>
                     <td><%= user.created_at.strftime('%Y年%-m月%-d日') %></td>
                     <td>
                       <span class="badge <%= user.status.eql?('actived') ? 'badge-success' : (user.status.eql?('blocked') ? 'badge-danger' : 'badge-warning') %>"><%= user.status_i18n %></span>
