Use ajax to submit data

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -11,7 +11,7 @@
         <div class="col-xl-8 col-md-12 p-0">
           <%= search_form_for @q, url: search_admin_users_path do |f| %>
             <div class="d-flex">
-              <div class="p-0 mr-2 w-50">
+              <div class="p-0 mr-2">
                 <%= f.search_field :name_or_company_name_or_email_cont, placeholder: "Text", class: "form-control search-box mw-300 mr-2" %>
               </div>
               <div class="p-0 mr-2">
