--- a/app/views/user/scenarios/delete_confirm.js.erb
+++ b/app/views/user/scenarios/delete_confirm.js.erb
@@ -1,2 +1,2 @@
-$('#confirmDelContent').html("<%= j render 'delete_confirm', exchange_item: @exchange_item %>");
+$('#confirmDelContent').html("<%= j render 'delete_confirm', scenario: @scenario %>");
 $('#confirmDelModal').modal('show');
