--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,34 +1,23 @@
 <div class="row">
   <div class="col-12">
     <div class="card">
-      <div class="card-header row">
-       <!-- Start: search condition -->
-        <div class="col-xl-auto col-md-12 p-0 mb-xl-0 mb-md-2">
-          <%= link_to new_admin_user_path do %>
-            <button type="button" class="btn btn-info mr-2"><i class="fa fa-plus"></i> new user </button>
-          <% end %>
-        </div>
-        <div class="col-xl-8 col-md-12 p-0">
-          <%= search_form_for @q, url: search_admin_users_path do |f| %>
-            <div class="d-flex">
-              <div class="p-0 mr-2">
-                <%= f.search_field :name_or_company_name_or_email_cont, placeholder: "Text", class: "form-control search-box mw-300 mr-2" %>
-              </div>
-              <div class="p-0 mr-2">
-                <%= f.select :status_eq, 
-                  options_for_select([["有効", "actived"], ["無効", "blocked"]], @params.present? && @params[:status_eq]),
-                  { include_blank: "すべて" },
-                  { class: "form-control filter-box"} 
-                %>
-              </div>
-              <div class="p-0">
-                <button class="btn btn-info btn-normal m-auto search-button" type="submit">検索</button>
-              </div>
-            </div>
-          <% end %>
-        </div>
-        <!-- End: search condition -->
+      <div class="card-header d-flex align-items-center">
+        <%= link_to new_admin_user_path do %>
+          <button type="button" class="btn btn-info mr-2"><i class="fa fa-plus"></i> 新規登録 </button>
+        <% end %>
+        <%= search_form_for @q, url: search_admin_users_path do |f| %>
+          <div class="d-flex">
+            <%= f.search_field :name_or_company_name_or_email_cont, placeholder: "氏名、会社名、メールで検索", class: "form-control mw-300 mr-2" %>
+            <%= f.select :status_eq, 
+              options_for_select([["有効", "actived"], ["無効", "blocked"]], @params.present? && @params[:status_eq]),
+              { include_blank: "すべて" },
+              { class: "form-control filter-box mr-2"} 
+            %>
+            <button class="btn btn-info fw-100" type="submit">検索</button>
+          </div>
+        <% end %>
       </div>
+
       <div class="card-body">
         <div class="table-responsive">
            <table class="table table-bordered table-striped">
@@ -38,7 +27,7 @@
                   <th class="fw-50 text-center"><%= sort_link(@q, :id, 'ID', default_order: :desc) %></th>
                   <th class="fw-150"><%= sort_link(@q, :name, '氏名', default_order: :asc) %></th>
                   <th class="fw-200"><%= sort_link(@q, :email, 'メールアドレス', default_order: :asc) %></th>
-                  <th class="fw-200">company_name</th>
+                  <th class="fw-200">会社名</th>
                   <th class="fw-150">登録日時</th>
                   <th class="fw-100">状況</th>
                   <th class="fw-250"></th>
@@ -51,29 +40,22 @@
                     <td><%= user.name %></td>
                     <td><%= user.email %></td>
                     <td><%= user.company_name %></td>
-                    <td><%= user.created_at.strftime('%Y年%-m月%-d日') %></td>
+                    <td><%= formatted_time(user.created_at) %></td>
                     <td>
                       <span class="badge <%= user.status.eql?('actived') ? 'badge-success' : (user.status.eql?('blocked') ? 'badge-danger' : 'badge-warning') %>"><%= user.status_i18n %></span>
                     </td>
                     <td>
                       <div>
-                        <%= link_to admin_user_path(user), class: "btn btn-outline-info btn-xs", target: :_blank do %>
-                          <i class="fas fa-eye"></i> 詳細
-                        <% end %>
-                        <%= link_to edit_admin_user_path(user), class: "btn btn-outline-info btn-xs" do %>
-                          <i class="fas fa-pencil-alt"></i> 編集
-                        <% end %>
-                      </div>
-                      <div class="mt-2">
-                        <a class="btn btn-outline-danger btn-xs" data-toggle="modal" data-target="#confirmSwitch" onclick="confirmScope(<%= user.id %>)">
+                        <%= link_to '編集', edit_admin_user_path(user), class: "btn btn-warning btn-sm" %>
+                        <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#confirmSwitch" onclick="confirmScope(<%= user.id %>)">
                           <% if user.status.eql?('actived')%>
-                            <i class="fas fa-lock"></i> ブロック
+                            ブロック
                           <% else %>
-                            <i class="fas fa-unlock"></i> ブロック解除
+                            ブロック解除
                           <% end %>
                         </a>
-                        <%= link_to delete_confirm_admin_user_path(user), remote: true, class: "btn btn-danger btn-xs" do%>
-                          <i class="fas fa-trash"></i> 削除
+                        <%= link_to delete_confirm_admin_user_path(user), remote: true, class: "btn btn-danger btn-sm" do%>
+                          削除
                         <% end %>
                       </div>
                     </td>
