--- a/app/views/admin/users/_delete_confirm.html.erb
+++ b/app/views/admin/users/_delete_confirm.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header align-items-center">
-        <label class="m-0">delete user?</label>
+        <label class="m-0">こちらのユーザーを削除してよろしいですが?</label>
         <button type="button" class="close" data-dismiss="modal">×</button>
       </div>
       <div class="modal-body">
