--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,7 +9,7 @@
           <div class="d-flex">
             <%= f.search_field :name_or_company_name_or_email_cont, placeholder: "氏名、会社名、メールで検索", class: "form-control mw-300 mr-2" %>
             <%= f.select :status_eq, 
-              options_for_select([["有効", "actived"], ["無効", "blocked"]], @params.present? && @params[:status_eq]),
+              options_for_select([["有効", "active"], ["無効", "blocked"]], @params.present? && @params[:status_eq]),
               { include_blank: "すべて" },
               { class: "form-control filter-box mr-2"} 
             %>
@@ -42,13 +42,13 @@
                     <td><%= user.company_name %></td>
                     <td><%= formatted_time(user.created_at) %></td>
                     <td>
-                      <span class="badge <%= user.status.eql?('actived') ? 'badge-success' : (user.status.eql?('blocked') ? 'badge-danger' : 'badge-warning') %>"><%= user.status_i18n %></span>
+                      <%= render_user_status(user.status) %>
                     </td>
                     <td>
                       <div>
                         <%= link_to '編集', edit_admin_user_path(user), class: "btn btn-warning btn-sm" %>
                         <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#confirmSwitch" onclick="confirmScope(<%= user.id %>)">
-                          <% if user.status.eql?('actived')%>
+                          <% if user.status.eql?('active')%>
                             ブロック
                           <% else %>
                             ブロック解除
