--- a/app/views/user/friends/index.html.erb
+++ b/app/views/user/friends/index.html.erb
@@ -39,7 +39,7 @@
                 <td><%= line_friend.created_at.strftime('%Y年%m月%d日 %H:%M') %></td>
                 <td>なし</td>
                 <td>
-                  <%= render_friend_status(line_friend.status).html_safe %>
+                  <%= render_friend_status(line_friend.status) %>
                 </td>
                 <td class="text-center">
                   <%= link_to user_friend_path(line_friend), class: "btn btn-primary btn-xs mr-2" do %>
