Handle scenario event

--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <table class="table table-bordered table-striped index">
+          <table class="table table-bordered index">
           <%# Header %>
             <thead>
               <tr>
