--- a/app/views/user/friends/show.html.erb
+++ b/app/views/user/friends/show.html.erb
@@ -1,1 +1,1 @@
-<friend-detail :friend="<%= @friend.to_json %>" channel_id="<%= @friend.channel.id %>"></friend-detail>
+<friend-detail :friend_id="<%= @friend.id %>" channel_id="<%= @friend.channel.id %>"></friend-detail>
