--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -152,6 +152,17 @@ td {
   color: rgb(235, 4, 4);
 }
 
+.invalid-box {
+  border: thin solid rgb(235, 4, 4);
+  border-radius: 4px;
+}
+
+.invalid-box-label {
+  color: rgb(235, 4, 4);
+  font-size: 10px;
+  font-weight: bold;
+}
+
 .search-box,
 .filter-box {
   min-width: 230px;
