--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,91 +10,12 @@
 @import "./register.css";
 @import "./slick/slick.css";
 @import "./slick/slick-theme.css";
+@import "./override.scss";
 * {
   font-family: Lucida Grande, Hiragino Kaku Gothic ProN,
     "\30D2\30E9\30AE\30CE\89D2\30B4   ProN W3", Meiryo, "\30E1\30A4\30EA\30AA",
     "sans-serif", Noto Color Emoji, Apple Color Emoji, Glyphicons Halflings,
     Segoe UI Emoji, Segoe UI Symbol, Noto Emoji;
-}
-
-// Override bootstrap
-.btn-success {
-  color: #fff;
-  background-color: #5cb85c;
-  border-color: #4cae4c;
-}
-
-.badge-primary,
-.btn-primary {
-  color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
-}
-
-.btn:disabled {
-  border-color: #a9a9a9;
-}
-
-.btn-warning {
-  border-color: #cc8521;
-  background: #d18f32;
-  color: #ffffff;
-}
-
-.btn-danger {
-  color: #fff;
-  background-color: #d9534f;
-  border-color: #d43f3a;
-}
-
-.btn-group-xs > .btn,
-.btn-xs {
-  padding: 1px 5px;
-  font-size: 12px !important;
-  line-height: 1.5;
-  border-radius: 3px;
-}
-
-.btn-group {
-  button {
-    padding: 2px 5px !important;
-  }
-}
-
-.text-sm {
-  .form-control {
-    font-size: 0.875rem !important;
-  }
-}
-
-a.sort_link {
-  color: #212529;
-}
-
-table,
-thead,
-tr,
-tbody,
-th,
-td {
-  vertical-align: middle;
-}
-
-.table td {
-  vertical-align: middle;
-}
-
-.index {
-  thead {
-    border-top: 2px solid #999;
-    background-color: #eee;
-  }
-}
-
-.table > tbody > tr > td {
-  line-height: 1.4;
-  vertical-align: middle;
-  border-top: 1px solid #ddd;
 }
 
 // START: card view
@@ -124,20 +45,7 @@ td {
 }
 
 // END: card view
-// START: Pagination
-.page-item .page-link {
-  background-color: white;
-  border-color: #d7dadc;
-  color: #6e767d;
-}
 
-.page-item.active .page-link {
-  background-color: white;
-  border-color: #17a2b8;
-  color: #17a2b8;
-}
-
-// END: Pagination
 .label-require {
   background-color: rgb(235, 4, 4);
   padding: 5px 5px 4px !important;
@@ -201,6 +109,10 @@ td {
 
 @for $i from 1 through 300 {
   $height: 0px + $i;
+  .h-#{$i} {
+    height: $height;
+  }
+
   .fh-#{$i} {
     height: $height;
     min-height: $height;
@@ -227,7 +139,7 @@ td {
   }
 }
 
-.mw-1200 {
+.mxw-1200 {
   max-width: 1200px;
 }
 
@@ -290,19 +202,6 @@ td {
   width: 100%;
   height: 0px;
   border-top: 1px dashed rgb(158, 151, 151);
-}
-
-// Datetime picker theme
-.theme-success .vdatetime-popup__header,
-.theme-success .vdatetime-calendar__month__day--selected > span > span,
-.theme-success .vdatetime-calendar__month__day--selected:hover > span > span {
-  background: #28a745;
-}
-
-.theme-success .vdatetime-year-picker__item--selected,
-.theme-success .vdatetime-time-picker__item--selected,
-.theme-success .vdatetime-popup__actions__button {
-  color: #28a745;
 }
 
 // Btn toggle
