--- a/app/views/user/setting/index.html.erb
+++ b/app/views/user/setting/index.html.erb
@@ -1,4 +1,4 @@
-<div class="mw-1200" >
+<div class="mxw-1200" >
   <div class="card">
     <div class="card-header d-flex">
       <h5 class="m-auto font-weight-bold">アカウント情報</h5>
