--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header d-flex align-items-center">
         <%= link_to new_admin_user_path do %>
-          <button type="button" class="btn btn-info mr-2"><i class="fa fa-plus"></i> 新規登録 </button>
+          <button type="button" class="btn btn-info fw-120 mr-2"><i class="fa fa-plus"></i> 新規登録 </button>
         <% end %>
         <%= search_form_for @q, url: search_admin_users_path do |f| %>
           <div class="d-flex">
@@ -13,7 +13,7 @@
               { include_blank: "すべて" },
               { class: "form-control filter-box mr-2"} 
             %>
-            <button class="btn btn-info fw-100" type="submit">検索</button>
+            <button class="btn btn-info fw-110" type="submit">検索</button>
           </div>
         <% end %>
       </div>
@@ -30,7 +30,7 @@
                   <th class="fw-200">会社名</th>
                   <th class="fw-150">登録日時</th>
                   <th class="fw-100">状況</th>
-                  <th class="fw-250"></th>
+                  <th class="fw-200"></th>
                 </tr>
               </thead>
               <tbody>
@@ -45,19 +45,26 @@
                       <%= render_user_status(user.status) %>
                     </td>
                     <td>
-                      <div>
+                      <div class="btn-group">
                         <%= link_to '編集', edit_admin_user_path(user), class: "btn btn-warning btn-sm" %>
-                        <a class="btn btn-primary btn-sm" data-toggle="modal" data-target="#confirmSwitch" onclick="confirmScope(<%= user.id %>)">
-                          <% if user.status.eql?('active')%>
-                            ブロック
-                          <% else %>
-                            ブロック解除
+                        <button type="button" class="btn btn-warning dropdown-toggle dropdown-icon" data-toggle="dropdown" aria-expanded="false"></button>
+                        <div class="dropdown-menu bg-white" role="menu" style="">
+                          <a class="dropdown-item" role="button" data-toggle="modal" data-target="#confirmSwitch" onclick="confirmScope(<%= user.id %>)">
+                            <% if user.status.eql?('active')%>
+                              ブロックする
+                            <% else %>
+                              ブロック解除する
+                            <% end %>
+                          </a>
+                          <div class="dropdown-divider"></div>
+                          <%= link_to delete_confirm_admin_user_path(user), remote: true, class: "dropdown-item", role: "button" do%>
+                            削除する
                           <% end %>
-                        </a>
-                        <%= link_to delete_confirm_admin_user_path(user), remote: true, class: "btn btn-danger btn-sm" do%>
-                          削除
-                        <% end %>
+                        </div>
                       </div>
+                      <%= link_to sso_admin_user_path(user), class: "btn btn-sm btn-info" do%>
+                        ログイン
+                      <% end %>
                     </td>
                   </tr>
                 <% end %>
