--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -62,7 +62,7 @@
                           <% end %>
                         </div>
                       </div>
-                      <%= link_to sso_admin_user_path(user), class: "btn btn-sm btn-info" do%>
+                      <%= link_to sso_admin_user_path(user), class: "btn btn-sm btn-info", target: "_blank" do%>
                         ログイン
                       <% end %>
                     </td>
