--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -1,7 +1,7 @@
   <aside class="main-sidebar elevation-4 sidebar-light-success">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link navbar-success">
-      <span class="text-white brand-text font-weight-bold">LINE MONSTER</span>
+      <span class="text-white brand-text font-weight-bold">LINE INSIGHT</span>
     </a>
 
     <!-- Sidebar -->
