--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -65,6 +65,10 @@ td {
   vertical-align: middle;
 }
 
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: #f9f9f9;
+}
+
 .index {
   thead {
     border-top: 2px solid #999;
