--- a/app/views/user/setting/index.html.erb
+++ b/app/views/user/setting/index.html.erb
@@ -1,38 +1,50 @@
-<div class="mxw-1200" >
+<div>
   <div class="card">
     <div class="card-header d-flex">
       <h5 class="m-auto font-weight-bold">アカウント情報</h5>
     </div>
     <div class="card-body">
-      <table class="table">
+      <table class="table table-striped index">
+        <thead>
+          <tr>
+            <th>項目</th>
+            <td></td>
+          </tr>
+        </thead>
         <tbody>
           <tr>
-            <th class="fw-300">表示名</th>
+            <th>表示名</th>
             <td><%= @line_account.display_name %></td>
           </tr>
           <tr>
-            <th class="fw-300">LINEアカウント名</th>
+            <th>LINEアカウント名</th>
             <td><%= @line_account.line_name %></td>
           </tr>
           <tr>
-            <th class="fw-300">LINE公式アカウントID</th>
+            <th>LINE公式アカウントID</th>
             <td><%= @line_account.line_user_id %></td>
           </tr>
           <tr>
-            <th class="fw-300">チャネルID</th>
+            <th>チャネルID</th>
             <td><%= @line_account.line_channel_id %></td>
           </tr>
           <tr>
-            <th class="fw-300">チャネルシークレット</th>
+            <th>チャネルシークレット</th>
             <td><%= @line_account.line_channel_secret %></td>
           </tr>
           <tr>
-            <th class="fw-300">Webhook URL</th>
-            <td><%= "#{ENV['MIX_ROOT_PATH']}/webhooks/#{@line_account.webhook_url}" %></td>
+            <th>Webhook URL</th>
+            <td>
+              <input-with-copy text="<%= "#{ENV['MIX_ROOT_PATH']}/webhooks/#{@line_account.webhook_url}" %>"></input-with-copy>
+            </td>
           </tr>
           <tr>
-            <th class="fw-300">LIFF ID</th>
+            <th>LIFF ID</th>
             <td><%= @line_account.liff_id %></td>
+          </tr>
+          <tr>
+            <th>有効友だち数</th>
+            <td><%= @line_account.line_friends.count %></td>
           </tr>
         </tbody>
       </table>
