Use template to create auto response

--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -11,7 +11,8 @@
         <%= link_to new_user_scenario_message_path do %>
           <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> メッセージを追加</button>
         <% end %>
-        <button type="button" class="btn btn-primary mr-2"><i class="fa fa-plus"></i> テンプレートを追加</button>
+        
+        <scenario-select-template :scenario_id="<%= @scenario.id %>"></scenario-select-template>
       </div>
       <div class="card-body">
         <div class="table-responsive">
@@ -24,6 +25,7 @@
                 <th>タイトル</th>
                 <th>タイプ</th>
                 <th>メッセージプレビュー</th>
+                <th class="fw-120">状況</th>
                 <th class="fw-200">操作</th>
               </tr>
             </thead>
@@ -36,6 +38,7 @@
                   <td><%= message.name %></td>
                   <td><message-type-label :data="<%= message.content.to_json %>"/></td>
                   <td><message-content :data="<%= message.content.to_json %>"></message-content></td>
+                  <td><%= render_scenario_message_status(message.status) %></td>
                   <td>
                     <div class="btn btn-warning btn-xs">編集</div>
                     <%= link_to '削除', delete_confirm_user_scenario_message_path(scenario_id: @scenario.id, id: message), remote: true, class: "btn btn-danger btn-xs" %>
