--- a/app/views/user/scenario_messages/new.html.erb
+++ b/app/views/user/scenario_messages/new.html.erb
@@ -1,1 +1,1 @@
-<scenario-message-new :scenario_id="<%= @scenario_id %>"></scenario-message-new>
+<scenario-message-editor :scenario_id="<%= @scenario_id %>"></scenario-message-editor>
