Show folder edit tooltip

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -100,7 +100,7 @@
         <!-- Account Setting -->
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
-            <%= link_to '<i class="nav-icon fas fa-home"></i><p>アカウント設定</p>'.html_safe,
+            <%= link_to '<i class="nav-icon fas fa-user-circle"></i><p>アカウント設定</p>'.html_safe,
               user_setting_index_path,
               class: "nav-link #{controller?("user/setting") ? 'active' : ''}"
             %>
