--- a/app/views/user/scenarios/index.html.erb
+++ b/app/views/user/scenarios/index.html.erb
@@ -16,7 +16,7 @@
                 <th class="mw-200">シナリオ名</th>
                 <th class="mw-100">状況</th>
                 <th class="mw-120">メッセージ数</th>
-                <th class="mw-300">設定</th>
+                <th class="fw-300">設定</th>
               </tr>
             </thead>
             <%# Data %>
@@ -28,14 +28,22 @@
                   <td><%= render_scenario_status(scenario.status) %></td>
                   <td><%= scenario.scenario_messages_count || 0 %></td>
                   <td>
-                    <%= link_to edit_user_scenario_path(scenario), class: "btn btn-warning btn-xs mr-1" do %>
-                      編集
-                    <% end %>
+                    <div class="btn-group">
+                      <%= link_to edit_user_scenario_path(scenario), class: "btn btn-warning btn-xs", type: "button" do %>
+                        編集
+                      <% end %>
+                      <%# <button type="button" class="btn btn-warning" @click="openEdit(autoResponse)">編集</button> %>
+                      <button type="button" class="btn btn-warning dropdown-toggle dropdown-icon" data-toggle="dropdown" aria-expanded="false"></button>
+                      <div class="dropdown-menu bg-white" role="menu" style="">
+                        <%= link_to 'シナリオをコピー', copy_confirm_user_scenario_path(scenario), remote: true, class: "dropdown-item", role: "button" %>
+                        <div class="dropdown-divider"></div>
+                        <%= link_to 'シナリオを削除', delete_confirm_user_scenario_path(scenario), remote: true, class: "dropdown-item", role: "button" %>
+                      </div>
+                    </div>
+
                     <%= link_to user_scenario_messages_path(scenario), class: "btn btn-primary btn-xs mr-1" do %>
                       配信文設定
                     <% end %>
-                    <%= link_to 'コピー', copy_confirm_user_scenario_path(scenario), remote: true, class: "btn btn-primary btn-xs" %>
-                    <%= link_to '削除', delete_confirm_user_scenario_path(scenario), remote: true, class: "btn btn-danger btn-xs" %>
                   </td>
                 </tr>
               <% end %>
