--- a/app/views/user/scenarios/index.html.erb
+++ b/app/views/user/scenarios/index.html.erb
@@ -29,11 +29,10 @@
                   <td><%= scenario.scenario_messages_count || 0 %></td>
                   <td>
                     <div class="btn-group">
-                      <%= link_to edit_user_scenario_path(scenario), class: "btn btn-warning btn-xs", type: "button" do %>
+                      <%= link_to edit_user_scenario_path(scenario), class: "btn btn-primary btn-sm", type: "button" do %>
                         編集
                       <% end %>
-                      <%# <button type="button" class="btn btn-warning" @click="openEdit(autoResponse)">編集</button> %>
-                      <button type="button" class="btn btn-warning dropdown-toggle dropdown-icon" data-toggle="dropdown" aria-expanded="false"></button>
+                      <button type="button" class="btn btn-primary dropdown-toggle dropdown-icon" data-toggle="dropdown" aria-expanded="false"></button>
                       <div class="dropdown-menu bg-white" role="menu" style="">
                         <%= link_to 'シナリオをコピー', copy_confirm_user_scenario_path(scenario), remote: true, class: "dropdown-item", role: "button" %>
                         <div class="dropdown-divider"></div>
@@ -41,7 +40,7 @@
                       </div>
                     </div>
 
-                    <%= link_to user_scenario_messages_path(scenario), class: "btn btn-primary btn-xs mr-1" do %>
+                    <%= link_to user_scenario_messages_path(scenario), class: "btn btn-warning btn-sm mr-1" do %>
                       配信文設定
                     <% end %>
                   </td>
