--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import "bootstrap";
 @import "admin-lte";
 @import "toastr/build/toastr";
 @import "bootstrap-vue/dist/bootstrap-vue.css";
@@ -120,7 +121,7 @@
   }
 }
 
-@for $i from 1 through 400 {
+@for $i from 1 through 800 {
   $width: 0px + $i;
   .fw-#{$i} {
     width: $width;
@@ -129,7 +130,7 @@
   }
 }
 
-@for $i from 101 through 400 {
+@for $i from 101 through 800 {
   $width: 0px + $i;
   .mw-#{$i} {
     min-width: $width;
