Change solution to make a request to line

--- a/app/views/user/setting/index.html.erb
+++ b/app/views/user/setting/index.html.erb
@@ -26,11 +26,11 @@
           </tr>
           <tr>
             <th>チャネルID</th>
-            <td><%= @line_account.line_channel_id %></td>
+            <td><%= @line_account.channel_id %></td>
           </tr>
           <tr>
             <th>チャネルシークレット</th>
-            <td><%= @line_account.line_channel_secret %></td>
+            <td><%= @line_account.channel_secret %></td>
           </tr>
           <tr>
             <th>Webhook URL</th>
