--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -52,6 +52,19 @@ a.sort_link {
   color: #212529;
 }
 
+table,
+thead,
+tr,
+tbody,
+th,
+td {
+  vertical-align: middle;
+}
+
+.table td {
+  vertical-align: middle;
+}
+
 .table-striped > tbody > tr:nth-of-type(odd) {
   background-color: #f9f9f9;
 }
