Show friends count on tag index

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -90,7 +90,7 @@
         <!-- Rich Menu -->
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
-            <%= link_to '<i class="nav-icon fas fa-images"></i><p>リッチメニュー</p>'.html_safe,
+            <%= link_to '<i class="nav-icon fas fa-bars"></i><p>リッチメニュー</p>'.html_safe,
               user_rich_menus_path,
               class: "nav-link #{controller?("user/rich_menus") ? 'active' : ''}"
             %>
