--- a/app/views/admin/base/_left_sidebar_menu.html.erb
+++ b/app/views/admin/base/_left_sidebar_menu.html.erb
@@ -11,9 +11,19 @@
         <!-- User List -->
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-item">
-            <%= link_to '<i class="nav-icon fa fa-clipboard-list"></i><p>ユーザー管理</p>'.html_safe,
+            <%= link_to '<i class="nav-icon fa fa-clipboard-list"></i><p>ユーザー一覧</p>'.html_safe,
               admin_users_path,
               class: "nav-link #{controller?("admin/users") ? 'active' : ''}"
+            %>
+          </li>
+        </ul>
+
+        <!-- Announcement List -->
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+          <li class="nav-item">
+            <%= link_to '<i class="nav-icon far fa-bell"></i><p>お知らせ一覧</p>'.html_safe,
+              admin_announcements_path,
+              class: "nav-link #{controller?("admin/announcements") ? 'active' : ''}"
             %>
           </li>
         </ul>
