Correct media filter behavior

--- a/app/views/user/setting/index.html.erb
+++ b/app/views/user/setting/index.html.erb
@@ -50,7 +50,7 @@
       </table>
     </div>
     <div class="card-footer d-flex">
-      <%= link_to edit_user_setting_index_path, class: "btn btn-success btm-sm m-auto fw-120" do %>
+      <%= link_to edit_user_setting_index_path, class: "btn btn-success btm-sm fw-120" do %>
         編集
       <% end %>
     </div>
