--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -109,17 +109,18 @@
 
 @for $i from 1 through 100 {
   $width: 0% + $i;
+
   .w-#{$i}p {
     width: $width;
   }
 
   $vw: 0vw + $i;
-  .vw-#{i} {
+  .vw-#{$i} {
     width: $vw;
   }
 
   $vh: 0vh + $i;
-  .vh-#{i} {
+  .vh-#{$i} {
     height: $vh;
   }
 }
@@ -136,8 +137,8 @@
     max-height: $height;
   }
 
-  .mh-#{i} {
-    min-height: $height;
+  .mh-#{$i} {
+    min-height: $height !important;
   }
 }
 
@@ -155,7 +156,7 @@
   .mw-#{$i} {
     min-width: $width;
   }
-  .mxw-#{i} {
+  .mxw-#{$i} {
     max-width: $width;
   }
   .w-#{$i} {
