--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -28,7 +28,7 @@
   border-color: #d43f3a;
 }
 
-.btn-group-xs > .btn,
+.btn-group-xs>.btn,
 .btn-xs {
   padding: 1px 5px;
   font-size: 12px !important;
@@ -65,7 +65,7 @@ td {
   vertical-align: middle;
 }
 
-.table-striped > tbody > tr:nth-of-type(odd) {
+.table-striped>tbody>tr:nth-of-type(odd) {
   background-color: #f9f9f9;
 }
 
@@ -76,7 +76,7 @@ td {
   }
 }
 
-.table > tbody > tr > td {
+.table>tbody>tr>td {
   line-height: 1.4;
   border-top: 1px solid #ddd;
 }
@@ -97,12 +97,12 @@ td {
   border-color: #17a2b8;
   color: #17a2b8;
 }
-// END: Pagination
 
+// END: Pagination
 // START: Datetime picker theme
 .theme-success .vdatetime-popup__header,
-.theme-success .vdatetime-calendar__month__day--selected > span > span,
-.theme-success .vdatetime-calendar__month__day--selected:hover > span > span {
+.theme-success .vdatetime-calendar__month__day--selected>span>span,
+.theme-success .vdatetime-calendar__month__day--selected:hover>span>span {
   background: #28a745;
 }
 
@@ -111,4 +111,26 @@ td {
 .theme-success .vdatetime-popup__actions__button {
   color: #28a745;
 }
+
 // END: Datetime picker theme
+// START: Css home page
+.home_announcement_btn {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0.75rem;
+  color: #000000;
+  border-bottom: 1px solid #dddddd;
+  .output {
+    p {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.home_announcement_btn:hover {
+  color: #000000;
+  background-color: #e6e6e6;
+  border: 1px solid #dddddd;
+}
+
+// END: Css home page
